로그인 수정

--- a/mandalaart/goals/templates/mainmanadal.html
+++ b/mandalaart/goals/templates/mainmanadal.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>5-1 목표 확인 페이지 </title>
 </head>
 <body>
-    화면정리용 
+    {% csrf_token %}
+    5-1 목표 확인 페이지
+
+    
 </body>
 </html>
