--- a/mandalaart/accounts/templates/login.html
+++ b/mandalaart/accounts/templates/login.html
@@ -1,28 +1,107 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>login</title>
+    <style>
+      #container {
+        position: relative;
+        width: 100%;
+        max-width: 1280px;
+        text-align: center;
+        align-items: center;
+        min-height: 100vh;
+        margin: 0 auto;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
 
-    <h1>로그인</h1>
-    <form class="user" method="POST">
-        {% csrf_token %}
-        <div>
-            <input type="text" id="username" name="username" placeholder="e-mail address">
-        </div>
-        <div>
-            <input type="password" id="password" name="password" placeholder="password">
-        </div>
-        <input type="submit" value="로그인하기">
-        <a>카카오로 로그인</a>
-        <hr>
+      img {
+        max-width: 100%;
+      }
+
+      input {
+        margin-bottom: 15px;
+        max-width: 280px;
+        height: 40px;
+        flex-shrink: 0;
+        border-radius: 4px;
+        border: 1px solid #e5e7eb;
+        background: #fff;
+        padding: 5px 10px;
+        box-sizing: border-box;
+      }
+      .error-message {
+        color: red;
+        font-size: 13px;
+        margin-top: 5px;
+        display: none;
+      }
+      #join {
+        color: #000;
+        text-align: center;
+        font-family: Noto Sans;
+        font-size: 13px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 31.475px;
+        letter-spacing: -0.492px;
+        text-decoration-line: underline;
+        margin-top: 10px;
+      }
+      @media (min-width: 768px) {
+        /* Styles for desktop */
+        input {
+          margin: 10px auto;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <form action="" method="POST">
+      {% csrf_token %}
+    <div id="container">
+      <img
+        src="{%static 'img/2023herethon5.png'%}"
+        style="width: 110px; margin-bottom: 10px"
+      />
+      <img
+        src="{%static 'img/Make your own Mandalaart 🌟.png'%}"
+        style="width: 300px; margin-bottom: 45px"
+      />
+   
+      
+      <input
+        type="text"
+        id="username"
+        name="username"
+        placeholder="E-mail address"
+        style="width: 400px"
+      />
+      <input
+        type="password"
+        id="password"
+        name="password"
+        placeholder="Password"
+        style="width: 400px"
+      />
+      <div id="error-message" class="error-message"></div>
+      <button type="submit"> <img
+        src="{% static 'img/login.png'%}"
+        style="width: 300px; margin-top: 10px"
+        onclick="login()"> </button>
+      <img
+        src="{% static 'img/kakaologin.png'%}"
+        style="width: 300px; margin-top: 10px"
+      />
     </form>
-
- <a href="{% url 'accounts:signup' %}">
-    회원가입 </a>
-</body>
+      <a href="{% url 'accounts:signup' %}"><div id="join" onclick="gotoJoin()">회원가입</div> </a>
+    </div>
+    <script src="{%static 'js/login.js'%}"></script>
+  </body>
 </html>
