--- a/mandalaart/accounts/templates/login.html
+++ b/mandalaart/accounts/templates/login.html
@@ -1,3 +1,5 @@
+{% load socialaccount %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,7 +20,7 @@
             <input type="password" id="password" name="password" placeholder="password">
         </div>
         <input type="submit" value="로그인하기">
-        <a>카카오로 로그인</a>
+        <a href="{% provider_login_url 'kakao' %}">카카오로 로그인</a>
         <hr>
     </form>
 
