--- a/mandalaart/goals/templates/middleGoal.html
+++ b/mandalaart/goals/templates/middleGoal.html
@@ -63,6 +63,7 @@
         height: 30px;
         position: relative;
         top: -500px;
+        margin-left: 10px;
       }
 
       #maingoalContainer {
@@ -73,6 +74,14 @@
         top: -500px;
         border-radius: 4px;
         background: #2f582c;
+        margin-bottom: 15px;
+        height: 0px;
+        flex-shrink: 0;
+        border-radius: 4px;
+        border: 1px solid #e5e7eb;
+        background: #fff;
+        padding: 5px 10px;
+        box-sizing: border-box;
       }
 
       @media (min-width: 768px) {
@@ -84,20 +93,14 @@
     </style>
   </head>
   <body>
-    <form method="post" action="{% url 'sub_goal_input' plan_id=plan_id %}">
-      {% csrf_token %}
     <div id="container">
-      
       <img
-        src="{%static 'img/Let’s make Mandalart.png' %}"
+        src="{% static 'img/Lets make Mandalart.png' %}"
         style="width: 300px; margin-bottom: 20px"
       />
-      <div id="example">예시 보러 가기</div>
+      <div id="example" onclick="gotoPlayer()">예시 보러 가기</div>
     </div>
-    <img
-      src="{% static 'img/Group 100.png' %}"
-      style="max-width: 360px; position: absolute; bottom: -13px"
-    />
+    <img src="{% static 'img/Group 100.png' %}" style="max-width: 360px; z-index: -10;" />
     <img
       src="{% static 'img/Group 18.png' %}"
       style="
@@ -107,76 +110,36 @@
         width: 80px;
         margin-top: 30px;
       "
+      onclick="editMaingoal()"
     />
-    <form method="post" action="{% url 'sub_goal_input' plan_id=plan_id %}">
-      {% csrf_token %}
-    <input
-      id="maingoal"
+    <div
+      id="maingoalContainer"
       style="
         color: #fff;
         text-align: center;
         font-family: Noto Sans;
         font-size: 13px;
         font-style: normal;
-        font-weight: 500;
+        font-weight: 1200;
         line-height: 20.308px; /* 156.213% */
         letter-spacing: -0.377px;
         border-style: hidden;
       "
-    />
-    <input
-      type="text"
-      id="maingoal1"
-      placeholder="목표 입력하기"
-      style="width: 280px; height: 30px; position: relative; top: 90px"
-    />
-    <input
-      type="text"
-      id="maingoal2"
-      placeholder="목표 입력하기"
-      style="width: 280px; height: 30px; position: relative; top: 90px"
-    />
-    <input
-      type="text"
-      id="maingoal3"
-      placeholder="목표 입력하기"
-      style="width: 280px; height: 30px; position: relative; top: 90px"
-    />
-    <input
-      type="text"
-      id="maingoal4"
-      placeholder="목표 입력하기"
-      style="width: 280px; height: 30px; position: relative; top: 90px"
-    />
-    <input
-      type="text"
-      id="maingoal5"
-      placeholder="목표 입력하기"
-      style="width: 280px; height: 30px; position: relative; top: 90px"
-    />
-    <input
-      type="text"
-      id="maingoal6"
-      placeholder="목표 입력하기"
-      style="width: 280px; height: 30px; position: relative; top: 90px"
-    />
-    <input
-      type="text"
-      id="maingoal7"
-      placeholder="목표 입력하기"
-      style="width: 280px; height: 30px; position: relative; top: 90px"
-    />
-    <input
-      type="text"
-      id="maingoal8"
-      placeholder="목표 입력하기"
-      style="width: 280px; height: 30px; position: relative; top: 90px"
-    />
-    <img
-      src="{% static 'img/inputbtn2.png' %}"
-      style="width: 290px; position: relative; top: 90px"
-    />
-    <script src="{% static 'js/middleGoal.js' %}"></script>
+    >{{ main_goal }}</div>
+    <form method="post" action="{% url 'sub_goal_input' plan_id=plan_id %}">
+      {% csrf_token %}
+      <div>
+          {% for i in '12345678' %}
+              {% with sub_goal_obj=sub_goals.i %}
+                  <input type="text" name="sub_goal{{ i }}" placeholder="목표 입력하기"><br>
+              {% endwith %}
+          {% endfor %}
+      </div>
+      <button type="submit" style="background: none; border: none;">
+        <img src="{% static 'img/inputbtn2.png' %}" alt="Submit" style="width: 290px; position: relative; top: -500px">
+      </button>
     </form>
+  
+    <script src="{% static 'js/middleGoal.js' %}"></script>
   </body>
 </html>
