png 파일 저장 구현

--- a/mandalaart/accounts/templates/join.html
+++ b/mandalaart/accounts/templates/join.html
@@ -72,6 +72,6 @@
       /></button>
     </form>
     </div>
-    <script src="../js/join.js"></script>
+    <script src="{% static 'js/join.js' %}"></script>
   </body>
 </html>
