예시 페이지

--- a/mandalaart/goals/templates/mainGoal.html
+++ b/mandalaart/goals/templates/mainGoal.html
@@ -119,7 +119,7 @@
       />
       <img src="{% static 'img/설명 1.png' %}" style="width: 280px" />
       <img src="{% static 'img/설명 2.png' %}" style="width: 280px" />
-      <div id="example">예시 보러 가기</div>
+      <div id="example"><a href="{% url 'examplePage' %}">예시 보러 가기</a></div>
     </div>
     <img src="{% static 'img/Group 68.png' %}" style="max-width: 360px" />
     {% comment %} <input
