--- a/mandalaart/goals/templates/middleGoal.html
+++ b/mandalaart/goals/templates/middleGoal.html
@@ -98,7 +98,7 @@
         src="{% static 'img/Lets make Mandalart.png' %}"
         style="width: 300px; margin-bottom: 20px"
       />
-      <div id="example" onclick="gotoPlayer()">예시 보러 가기</div>
+      <div id="example"><a href="{% url 'examplePage' %}">예시 보러 가기</a></div>
     </div>
     <img src="{% static 'img/Group 100.png' %}" style="max-width: 360px; z-index: -10;" />
     <img
