--- a/mandalaart/goals/templates/detailGoal.html
+++ b/mandalaart/goals/templates/detailGoal.html
@@ -69,7 +69,7 @@
         top: -20px;
       }
 
-      #input {
+      #id_way_goal {
         display: flex;
         width: 175px;
         height: 23px;
@@ -152,7 +152,7 @@
           style="position: relative; width: 40px; left: 125px; top: 10px"
         />
         <div id="num">01</div>
-        <div type="text" id="input" placeholder="상세 목표를 입력해주세요.">{{ form.way_goal }} </div>
+        <div>{{ form.way_goal }} </div>
         <input type="text" id="memo" placeholder="✏️ 메모를 입력하세요." />
         <hr
           style="
@@ -186,7 +186,7 @@
           style="position: relative; width: 40px; left: 125px; top: 10px"
         />
         <div id="num">02</div>
-        <input type="text" id="input" placeholder="상세 목표를 입력해주세요." />
+        <div>{{ form.way_goal }} </div>
         <input type="text" id="memo" placeholder="✏️ 메모를 입력하세요." />
         <hr
           style="
@@ -220,7 +220,7 @@
           style="position: relative; width: 40px; left: 125px; top: 10px"
         />
         <div id="num">03</div>
-        <input type="text" id="input" placeholder="상세 목표를 입력해주세요." />
+        <div>{{ form.way_goal }} </div>
         <input type="text" id="memo" placeholder="✏️ 메모를 입력하세요." />
         <hr
           style="
@@ -254,7 +254,7 @@
           style="position: relative; width: 40px; left: 125px; top: 10px"
         />
         <div id="num">04</div>
-        <input type="text" id="input" placeholder="상세 목표를 입력해주세요." />
+        <div>{{ form.way_goal }} </div>
         <input type="text" id="memo" placeholder="✏️ 메모를 입력하세요." />
         <hr
           style="
@@ -288,7 +288,7 @@
         style="position: relative; width: 40px; left: 125px; top: 10px"
       />
         <div id="num">05</div>
-        <input type="text" id="input" placeholder="상세 목표를 입력해주세요." />
+        <div>{{ form.way_goal }} </div>
         <input type="text" id="memo" placeholder="✏️ 메모를 입력하세요." />
         <hr
           style="
@@ -322,7 +322,7 @@
         style="position: relative; width: 40px; left: 125px; top: 10px"
       />
         <div id="num">06</div>
-        <input type="text" id="input" placeholder="상세 목표를 입력해주세요." />
+        <div>{{ form.way_goal }} </div>
         <input type="text" id="memo" placeholder="✏️ 메모를 입력하세요." />
         <hr
           style="
@@ -356,7 +356,7 @@
           style="position: relative; width: 40px; left: 125px; top: 10px"
         />
         <div id="num">07</div>
-        <input type="text" id="input" placeholder="상세 목표를 입력해주세요." />
+        <div>{{ form.way_goal }} </div>
         <input type="text" id="memo" placeholder="✏️ 메모를 입력하세요." />
         <hr
           style="
@@ -390,7 +390,7 @@
         style="position: relative; width: 40px; left: 125px; top: 10px"
       />
         <div id="num">08</div>
-        <input type="text" id="input" placeholder="상세 목표를 입력해주세요." />
+        <div>{{ form.way_goal }} </div>
         <input type="text" id="memo" placeholder="✏️ 메모를 입력하세요." />
         <hr
           style="
